--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <a href="#about" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-gray-800 w-full">ABOUT</a>
                 <a href="#classes" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-gray-800 w-full">CLASSES</a>
                 <a href="#contact" class="block px-3 py-2 rounded-md text-base font-medium hover:bg-gray-800 w-full">CONTACT</a>
-                <a href="#" class="mt-2 text-center w-full bg-accent text-white px-5 py-2 rounded-lg border-2 border-orange font-bold hover:bg-orange-700 transition duration-300">JOIN NOW</a>
+                <a href="pricing.html" class="mt-2 text-center w-full bg-accent text-white px-5 py-2 rounded-lg border-2 border-orange font-bold hover:bg-orange-700 transition duration-300">JOIN NOW</a>
             </div>
         </div>
     </header>
@@ -122,9 +122,9 @@
                 <h1 class="hero-title">
                     BUILD YOUR <br>BODY STRONG
                 </h1>
-                <button class="text-white border-2 border-accent px-6 py-3 rounded-xl font-bold tracking-wider bg-orange-700 hover:bg-transparent transition duration-300 shadow-xl">
+                <a href="pricing.html" class="text-white border-2 border-accent px-6 py-3 rounded-xl font-bold tracking-wider bg-orange-700 hover:bg-transparent transition duration-300 shadow-xl inline-block text-center">
                     GET STARTED
-                </button>
+                </a>
             </div>
 
             <div class="md:col-span-1 hidden lg:block"></div>
@@ -212,20 +212,9 @@
                     <p class="text-gray-200">123 Example St</p>
                     <p class="text-gray-200">City, State 128545</p>
                 </div>
-
-                <div class="space-y-4">
-                    <h3 class="text-xl font-bold tracking-wider uppercase text-accent">OPENING HOURS</h3>
-                    <p class="text-gray-200">
-                        <span class="font-semibold w-16 inline-block">Mon - Fri:</span> (123) 456-7890
-                    </p>
-                    <p class="text-gray-200">
-                        <span class="font-semibold w-16 inline-block">Sat - Sun:</span> (123) 456-7330
-                    </p>
-                </div>
-
                 <div class="space-y-4">
                     <h3 class="text-xl font-bold tracking-wider uppercase text-accent">PHONE US</h3>
-                    <p class="text-3xl font-extrabold text-white">(123) 456-7880</p>
+                    <p class="text-3xl font-extrabold text-white">(+91)9586683348</p>
                 </div>
             </div>
         </section>
